# medinamushafanalyzer

./: .gitignore  CMakeLists.txt  CommonPCH.h  CustomOutputDev.cpp  CustomOutputDev.h  README.md  afont.cpp  afont.h  aglyph.cpp  aglyph.h  application.qrc  constants.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  pageanalysisresult.cpp  pageanalysisresult.h  pathdelegate.h  quran.cpp  quransearch.cpp  quransearch.h  renderarea.cpp  renderarea.h  segmentsubword.cpp  shapeItem.h  shapeitem.cpp  test.natvis  worditem.cpp  worditem.h
TFMatcherCpp/: AlignedTF.cpp  AlignedTF.h  Matcher.cpp  Matcher.h  Polygon.cpp  Polygon.h  README.md  SharedDefinitions.h  StringUtils.cpp  StringUtils.h  TurningFunction.cpp  TurningFunction.h  Vector2.cpp  Vector2.h
